k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hl-fe-deployment
  labels:
    app: hl-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hl-fe
  template:
    metadata:
      labels:
        app: hl-fe
    spec:
      containers:
      - name: hl-fe
        image: dockercentral.azurecr.io/hl-fe
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: pullsecret
